styles/main.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Inter", sans-serif;
    color: #E0F2F1;
}


body{
    background-color: rgba(2,31,32,0.8);
}


.title{
    text-align: center;
    padding-top: 30px;
    color: #F5F5F5;
    font-size: 35px;

}

.calcContainer{
    margin-top: 80px;
    display: flex;
    justify-content: center;
    align-items: center;
    
}

.glass{
    background:linear-gradient(135deg,rgba(2,31,32,0.1), rgba(2,31,32,0));
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    
    border-radius: 20px;
    border: 1px solid rgba(255, 255, 255, 0.18);
    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
    
    width: 340px;
    height: 500px;
}


.answerPanel{
    height: 150px;
    font-size: 40px;
    font-weight: 300;
    text-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    padding-bottom: 10px;
    padding-right: 20px;
}

.wholeExpression{
    display: flex;
    justify-content: flex-end;
    align-items: flex-start;
}


.separator{
    display: flex;
    justify-content: center;
}

hr{
    text-align: center;
    width: 85%;
    border: 1px solid rgba(255, 255, 255, 0.1);
}


.buttonPanel{
    margin-top: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 30px;
    
}

.calcButton{
    background-color: transparent;
    border:none;
    outline: none;
    text-decoration: none;
    cursor: pointer;
    font-size: 25px;
    font-weight: 500;
    letter-spacing: 0.5px;
    text-align: center;
    
    width: 70px;
    
}

.calcButton.operator{
    color:rgba(255, 255, 255, 0.6);
}

.calcButton:hover{
    background: rgba(255, 255, 255, 0.05);
    transition: all 0.2s ease;
    border-radius: 20px;
}

